--- a/e-commerce-dashboard/package.json
+++ b/e-commerce-dashboard/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
     "@mui/styled-engine-sc": "^6.1.0",
+    "axios": "^1.7.7",
     "bootstrap": "^4.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
