--- a/e-commerce-dashboard/package.json
+++ b/e-commerce-dashboard/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
     "@mui/styled-engine-sc": "^6.1.0",
+    "@stripe/stripe-js": "^4.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^4.1.3",
+    "razorpay": "^2.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
