--- a/e-commerce-dashboard/.env
+++ b/e-commerce-dashboard/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:8000/api/v1;
-REACT_APP_RAZORPAY_KEY_ID=
+VITE_API_URL=http://localhost:8000/api/v1
+# REACT_APP_RAZORPAY_KEY_ID=
