--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -2,5 +2,5 @@ PORT=8000
 
 NODE_ENV=Production
 
-DB_URL=mongodb://localhost:27017/mini-ecommerce
+DB_URI=mongodb://localhost:27017/mini-ecommerce
 
